--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -2,3 +2,4 @@ android.useAndroidX=true
 android.enableJetifier=true
 org.gradle.jvmargs=-Xmx1536M
 android.enableR8=true
+org.gradle.java.home=C:\\Users\\212488800\\.jdks\\corretto-1.8.0_272
